--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "cz-git": "^1.9.4",
     "element-plus": "^2.8.3",
     "nprogress": "^0.2.0",
