--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.8.3",
     "nprogress": "^0.2.0",
     "vue": "^3.4.37",
+    "sass": "^1.54.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
