--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "cz-git": "^1.9.4",
+    "echarts": "^5.6.0",
     "element-plus": "^2.8.3",
     "nprogress": "^0.2.0",
     "sass": "^1.84.0",
